--- a/app/views/pstaffs/new.html.erb
+++ b/app/views/pstaffs/new.html.erb
@@ -1,4 +1,4 @@
-<% @pstaff.type_applicant = 'Parmanent staff' %>
+<% @pstaff.type_applicant = 'Parmanent Staff' %>
 
 
 <%= render 'form', pstaff: @pstaff %>
