--- a/app/views/check/phase1.html.erb
+++ b/app/views/check/phase1.html.erb
@@ -14,6 +14,7 @@
       <th>Name</th>
       <th>EMP_ID</th>
       <th>Department</th>
+      <th>Applicant Type</th>
       <th>show</th>
       <th>Approve</th>
       <th>Disapprove</th>
@@ -28,8 +29,9 @@
        <td ><%= phase.name %></td>
         <td ><%= phase.unique_id %></td>
        <td ><%= phase.department %></td>
+       <td><%= phase.type_applicant%></td>
        <td ><%= link_to "Show", show_user_path(phase.id), method: :get,class:"btn btn-primary btn-sm" %></td>
-       <td><button type="button" class="btn btn-warning btn-md" data-toggle="modal" style="margin:10px;"  onclick="sticker_allotment(<%= phase.id%>);" data-disable-with="Validating ...">Submit</button></td>
+       <td><button type="button" class="btn btn-warning btn-md" data-toggle="modal" style="margin:10px;"  onclick="sticker_allotment(<%= phase.id%>);" data-disable-with="Validating ...">Approve</button></td>
         <!-- <td ><%= link_to "Approve", approve_path(phase), method: :post,class:"btn btn-primary btn-sm" %></td>
          --> <td ><%= link_to "Disapprovep", disapprove_path(phase), method: :post,class:"btn btn-primary btn-sm" %></td>
          
