--- a/app/views/check/show_user_form.html.erb
+++ b/app/views/check/show_user_form.html.erb
@@ -134,6 +134,37 @@
     </td>
   </tr>
 
+  <% if @pstaff.type_applicant == 'Student'%>
+  <tr>
+    <th scope="row">12</th>
+    <td style="font-size: large">Medical Certificate  </td>
+    <td style="font-size: large">
+      <button type="button" class="btn btn-info btn-sm" data-toggle="modal" data-target="#myModal1">view</button>
+      <!-- Modal -->
+      <div class="modal fade" id="myModal1" role="dialog">
+        <div class="modal-dialog modal-lg modal-full">
+
+          <!-- Modal content-->
+          <div class="modal-content">
+            <div class="modal-header">
+              <button type="button" class="close" data-dismiss="modal">&times;</button>
+            </div>
+            <div class="modal-body ">
+              <iframe src="<%=@pstaff.document%>" width="100%" height="500px">
+                <p>Your browser does not support iframes.</p>
+              </iframe>
+            </div> 
+
+          </div>
+
+        </div>
+      </div>
+
+
+
+    </td>
+  </tr>
+
   <tr>
     <th scope="row">13</th>
     <td style="font-size: large">RC holder name</td>
