--- a/app/views/pstaffs/_phd_form.html.erb
+++ b/app/views/pstaffs/_phd_form.html.erb
@@ -38,11 +38,11 @@
 
    
   <div class="field">
-  <h5><%= form.text_field :type_applicant, label: "Applicant Type",:required=>true,:disabled=>true,class:"label" %></h5>
+  <h5><%= form.text_field :type_applicant, label: "Applicant Type",:required=>true,:readonly=>true,class:"label" %></h5>
   </div>
    
  <div class="field">
-  <h5><%= form.text_field :vehical_type, label: "Vehicle Type",:required=> true,class:"label" %></h5>
+  <h5><%= form.select :vehical_type, Pstaff::VEHICAL ,:required=>true , class:"label" %></h5>
   </div>
    
    <div class="field">
@@ -78,7 +78,7 @@
   </div>
 
   <div class="field">
-   <p> if registration certificate note on the name of the applicant then fill the name on the RC  and relationship between the applicant and RC holder </p>
+   <p> if registration certificate not on the name of the applicant then fill the name on the RC  and relationship between the applicant and RC holder </p>
   <h5><%= form.text_field :RC_holder_name %></h5>
   <h5><%= form.text_field :relationship %></h5>
   </div>
