--- a/app/views/pstaffs/show.html.erb
+++ b/app/views/pstaffs/show.html.erb
@@ -133,6 +133,39 @@
 
     </td>
   </tr>
+  
+  <% if @pstaff.type_applicant == 'Student'%>
+  <tr>
+    <th scope="row">12</th>
+    <td style="font-size: large">Medical Certificate  </td>
+    <td style="font-size: large">
+      <button type="button" class="btn btn-info btn-sm" data-toggle="modal" data-target="#myModal1">view</button>
+      <!-- Modal -->
+      <div class="modal fade" id="myModal1" role="dialog">
+        <div class="modal-dialog modal-lg modal-full">
+
+          <!-- Modal content-->
+          <div class="modal-content">
+            <div class="modal-header">
+              <button type="button" class="close" data-dismiss="modal">&times;</button>
+            </div>
+            <div class="modal-body ">
+              <iframe src="<%=@pstaff.document%>" width="100%" height="500px">
+                <p>Your browser does not support iframes.</p>
+              </iframe>
+            </div> 
+
+          </div>
+
+        </div>
+      </div>
+
+
+
+    </td>
+  </tr>
+  <% end %>
+
 
   <tr>
     <th scope="row">13</th>
@@ -171,7 +204,7 @@
     <%= link_to 'Edit', edit_pstaff_path(@pstaff),class:"btn btn-primary"  %>
 <% end %>
 <% if current_user %>
-    <strong><%=  link_to "Signout" , destroy_user_session_path ,method:     :delete, class:"btn btn-success"  %></strong></div>
+    <strong><%=  link_to "Back" , :back, class:"btn btn-success"  %></strong></div>
 <% end %>
 
 
