--- a/app/views/check/phase1.html.erb
+++ b/app/views/check/phase1.html.erb
@@ -1,14 +1,6 @@
 <% if current_user.phase1 ==true%>
-
- <!-- <p> <h1>Unapproved application</h1> count = <%= @phases.where(:phase1 => false).count %></p>  -->
-
-<div class="shadow-lg p-3 mb-5 bg-black rounded">
-    <div class="panel panel-default">
-      <div class="panel-heading" >
-        <h2 class="text-center"><b>Unapproved Application</b></h2>
-      </div>
-      <div class="panel-body">
-        <table id="table_id" class="table table-striped  table-hover table-bordered">
+<h2 class="text-center"><b>Unapproved Application</b></h2>
+<table id="table_id" class="table table-striped  table-hover table-bordered">
           <thead >
           <tr>
       <th>Name</th>
@@ -32,8 +24,8 @@
        <td><%= phase.type_applicant%></td>
        <td ><%= link_to "Show", show_user_path(phase.id), method: :get,class:"btn btn-primary btn-sm" %></td>
        <td><button type="button" class="btn btn-warning btn-md" data-toggle="modal" style="margin:10px;"  onclick="sticker_allotment(<%= phase.id%>);" data-disable-with="Validating ...">Approve</button></td>
-        <!-- <td ><%= link_to "Approve", approve_path(phase), method: :post,class:"btn btn-primary btn-sm" %></td>
-         --> <td ><%= link_to "Disapprovep", disapprove_path(phase), method: :post,class:"btn btn-primary btn-sm" %></td>
+    
+         <td ><%= link_to "Disapprove", disapprove_path(phase), method: :post,class:"btn btn-primary btn-sm" %></td>
          
          
        
@@ -44,10 +36,7 @@
 <% end %>
 </tbody>
 </table>
-<% if current_user %>
-    <%= link_to "signout" , destroy_user_session_path ,method:     :delete  %>
-    <%= link_to 'change password' , edit_user_registration_path %>
-<% end %>
+
 
 <!-- <center>
     <button type="button" class="btn btn-warning btn-md" data-toggle="modal" style="margin:10px;"  onclick="sticker_allotment(64);" data-disable-with="Validating ...">Submit</button>
@@ -57,9 +46,6 @@
 <% else %>
     <%= render "devise/sessions#new" %>
 <%end %>
-</div>
- </div>
- </div>
 
 
  <!--  for remark -->
