--- a/app/views/check/phase2.html.erb
+++ b/app/views/check/phase2.html.erb
@@ -1,12 +1,6 @@
 <% if current_user.phase2 ==true%>
-<div class="shadow-lg p-3 mb-5 bg-black rounded">
-    <div class="panel panel-default">
-      <div class="panel-heading" >
-        <h2 class="text-center">Unapproved Application</h2>
-      </div>
-        <div class="panel-body">
-<table id="table_id" class="table table-hover table-fixedheader  table-striped table-bordered">
-
+<h2 class="text-center"><b>Unapproved Application</b></h2>
+<table id="table_id" class="table table-striped  table-hover table-bordered">
   <thead style="font-size: large">
   <tr >
       <th>Name</th>
@@ -46,12 +40,6 @@
   <%end %>
 </tbody>
 </table>
-
-
-<% if current_user %>
-    <%= link_to "signout" , destroy_user_session_path ,method:     :delete  %>
-    <%= link_to 'change password' , edit_user_registration_path %>
-<% end %>
 <% else %>
    <%= render "devise/sessions#new" %>
 <% end %>
