--- a/app/views/check/phase3.html.erb
+++ b/app/views/check/phase3.html.erb
@@ -1,11 +1,7 @@
 <% if current_user.phase3 ==true%>
 
-<div class="shadow-lg p-3 mb-5 bg-black rounded">
-  <div class="panel panel-default">
-    <div class="panel-heading" >
-      <h2 class="text-center"><b>Unapproved Application</b></h2>
-    </div>
-    <div class="panel-body">
+<h2 class="text-center"><b>Unapproved Application</b></h2>
+
 
 <table id="table_id" class="table table-striped">
 <thead>
@@ -40,9 +36,9 @@
 </tbody>
 </table>
 
-<h2>Approved application</h2>
+<h2 class="text-center"><b>Unapproved Application</b></h2>
 
-<table id="table_id" class="table table-striped">
+<table id="table_id1" class="table table-striped">
 <thead>
             <tr>
             <th>Name</th>
@@ -63,7 +59,7 @@
        <td ><%= phase.department %></td>
        <td><%= phase.type_applicant%></td>
        <td ><%= link_to "Show", show_user_path(phase.id), method: :get,class:"btn btn-primary btn-sm" %></td>
-        <td>phase.sticker</td>
+        <td><%=phase.sticker%></td>
   </tr>
     <% end %>
    <% end %>
@@ -80,9 +76,7 @@
    <%= render "devise/sessions#new" %>
 
 <% end %>
- </div>
- </div>
- </div>
+ 
 
 
 
@@ -131,6 +125,8 @@
 <script >$(document).ready( function () {
     $('#table_id').DataTable();
 } )</script>
-
+<script >$(document).ready( function () {
+    $('#table_id1').DataTable();
+} )</script>
 
  
